--- a/client-participation/js/templates/readReactView.handlebars
+++ b/client-participation/js/templates/readReactView.handlebars
@@ -2,7 +2,6 @@
 
 <div
   id="readReactView"
-  style="margin-bottom: -40px;"
   >
 
   {{!-- Top of "Card stack" --}}
@@ -40,7 +39,9 @@
 	  {{/if}}
 	</div>
 
-  {{!-- Empty "Card stack" div1 (notice css "top" and "width") --}}
+	
+	{{#if false}}
+  	{{!-- Empty "Card stack" div1 (notice css "top" and "width") --}}
 	<div
 		style="
 			min-height: 30px;
@@ -52,7 +53,7 @@
 		"
 		class="lightPanel">
 	</div>
-  {{!-- Empty "Card stack" div2 (notice css "top" and "width") --}}
+  	{{!-- Empty "Card stack" div2 (notice css "top" and "width") --}}
 	<div
 		style="
 			min-height: 30px;
@@ -64,4 +65,5 @@
 		"
 		class="lightPanel">
 	</div>
+	{{/if}}
 </div>
