--- a/client-participation/js/templates/participation.handlebars
+++ b/client-participation/js/templates/participation.handlebars
@@ -435,7 +435,7 @@
 
 
 {{!  ------------ BEGIN FOOTER ---------------  }}
-{{#unless no_footer}}
+{{#if false}}
 
   <div style="margin-top: 40px; margin-bottom: 20px;" data-test-footer>
     <a href="https://pol.is" target="_blank" dir="auto">
@@ -464,7 +464,7 @@
       </a>
     </div>
   </div> --}}
-{{/unless}}
+{{/if}}
   {{! END FOOTER}}
 {{!  ------------ END FOOTER ---------------  }}
 
