--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -303,6 +303,7 @@
         id="passButton"
         class="reactionButton"
         >
+        <span>/</span>
         <span>{{s.pass}}</span>
       </button>
     </div>
