Style vote view

--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -159,7 +159,8 @@ img {
 }
 
 .lightPanel {
-  background-color: white;
+  background-color: $kennislink-light-gray;
+  padding: 1.5rem;
   //border: solid 1px lightgray;
   //border-radius: 5px;
 }
