Bring back remaining number of comments

--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -103,7 +103,7 @@
     <span class="screen-reader-text">
       {{remainingStringScreenReader}}
     </span>
-
+    <p><em>TITLE ({{remainingString}})</em></p>
     {{#if false}}
     {{! social stuff }}
         <img
