--- a/client-participation/js/templates/comment-form.handlebars
+++ b/client-participation/js/templates/comment-form.handlebars
@@ -220,13 +220,8 @@
         class="comment_form_control_hideable unselectable">
       </label>
       <button
-        class="
-          Btn
-          Btn-primary
-          unselectable
-          "
+        class="reactionButton"
         id="comment_button"
-
         type="submit"
         style="
           text-transform: none;
@@ -234,16 +229,16 @@
           font-weight: 500;
           cursor: pointer;
           border: none;
-          border-radius: 4px;
-          background-color: #0090ff;
+          border-radius: 0px;
           color: white;
-          letter-spacing; 0.07em;
+          letter-spacing: 0.07em;
           min-width: 110px;
           height: 40px;
           margin-inline-start: 5px;
           {{customBtnStyles}}
           ">
-        {{s.submitComment}}
+          <span>+</span>
+          <span>{{s.submitComment}}</span>
       </button>
    </div>
 
@@ -261,7 +256,7 @@
           style="display: none; {{#unless desktop}}font-size:12px{{/unless}}"
           role="alert"
           >
-            <span style="margin-inline-start: 5px">
+            <span>
               {{{s.commentSent}}}
             </span>
         </p>
@@ -271,7 +266,7 @@
           style="display: none; {{#unless desktop}}font-size:12px{{/unless}}"
           role="alert"
           >
-            <span style="margin-inline-start: 5px">
+            <span>
               <i
                 class="fa fa-bullhorn">
               </i>
@@ -284,7 +279,7 @@
           style="display: none; {{#unless desktop}}font-size:12px{{/unless}}"
           role="alert"
           >
-            <span style="margin-inline-start: 5px">
+            <span>
               <i
                 class="fa fa-bullhorn">
               </i>
@@ -297,7 +292,7 @@
           style="display: none; {{#unless desktop}}font-size:12px{{/unless}}"
           role="alert"
           >
-            <span style="margin-inline-start: 5px">
+            <span>
               <i
                 class="fa fa-bullhorn">
               </i>
@@ -310,7 +305,7 @@
           style="display: none; {{#unless desktop}}font-size:12px{{/unless}}"
           role="alert"
           >
-            <span style="margin-inline-start: 5px">
+            <span>
               <i
                 class="fa fa-bullhorn">
               </i>
@@ -323,7 +318,7 @@
           style="display: none; {{#unless desktop}}font-size:12px{{/unless}}"
           role="alert"
           >
-            <span style="margin-inline-start: 5px">
+            <span>
               <i
                 class="fa fa-bullhorn">
               </i>
