Move comment form inside the readReactView container, functioning switch between voting and comment view

--- a/client-participation/js/templates/readReactView.handlebars
+++ b/client-participation/js/templates/readReactView.handlebars
@@ -46,7 +46,18 @@
 	    </div>
 	  </div>
 	  {{else}}
-  		{{view voteView}}
+        {{#if showingComments}}
+            {{!  ------------ SUBMIT COMMENT FORM ---------------  }}
+            <div
+                    id="commentFormParent"
+                    class="POLIS_COMMENT_FORM {{#if no_write}}displayNone{{/if}}"
+            >
+                {{view commentForm}}
+            </div>
+        {{else}}
+          {{view voteView}}
+        {{/if}}
+
 	  {{/if}}
 	</div>
 
