--- a/client-participation/js/templates/comment-form.handlebars
+++ b/client-participation/js/templates/comment-form.handlebars
@@ -6,7 +6,7 @@
   style="
     {{#if no_write_hint}}visibility: hidden;{{/if}}
     {{!--
-    width: 40%;
+    width: 100%;
     {{#if desktop}}width: 60%;{{/if}}
      --}}
     margin-top: 0px;
@@ -203,8 +203,10 @@
     style="
       inset-inline-end: 0px;
       top: 0px;
-
-      text-align: end;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: end;
       ">
       <span
         id="commentCharCount"
@@ -233,7 +235,6 @@
           color: white;
           letter-spacing: 0.07em;
           min-width: 110px;
-          height: 40px;
           margin-inline-start: 5px;
           {{customBtnStyles}}
           ">
@@ -246,8 +247,8 @@
       <div
         style="
           {{#if no_write_hint}}visibility: hidden;{{/if}}
-          width: 40%;
-          {{#if desktop}}{{!-- margin-inline-end: 20px; --}}width: 60%;{{/if}}
+          width: 100%;
+          {{#if desktop}}{{!-- margin-inline-end: 20px; --}}width: 100%;{{/if}}
           margin-top: 0px;
           "> {{! protips column }}
 
