--- a/client-participation/js/templates/readReactView.handlebars
+++ b/client-participation/js/templates/readReactView.handlebars
@@ -14,6 +14,7 @@
   		position:relative;
   		top: 0px;
   		z-index: 3;
+        margin-bottom: 1rem;
   		{{!-- min-height: 144px; attempt to avoid flashing on vote view load--}}
   	">
 
@@ -21,10 +22,10 @@
     <button class="reactionButton" id="switchBetweenCommentsAndVotingButton">
         {{#if showingComments}}
             <span>*</span>
-            <span>Stem</span>
+            <span>STEM</span>
         {{else}}
             <span>+</span>
-            <span>Nieuw</span>
+            <span>NIEUW</span>
         {{/if}}
     </button>
 
