Bring back privacy & TOS links in footer

--- a/client-participation/js/templates/participation.handlebars
+++ b/client-participation/js/templates/participation.handlebars
@@ -425,12 +425,9 @@
 
 
 {{!  ------------ BEGIN FOOTER ---------------  }}
-{{#if false}}
+{{#unless no_footer}}
 
   <div style="margin-top: 40px; margin-bottom: 20px;" data-test-footer>
-    <a href="https://pol.is" target="_blank" dir="auto">
-      {{> logo}}
-    </a>
     <div
       style="
         margin-top: 15px;
@@ -454,7 +451,7 @@
       </a>
     </div>
   </div> --}}
-{{/if}}
+{{/unless}}
   {{! END FOOTER}}
 {{!  ------------ END FOOTER ---------------  }}
 
