--- a/client-participation/js/templates/readReactView.handlebars
+++ b/client-participation/js/templates/readReactView.handlebars
@@ -21,10 +21,18 @@
 
     <button class="reactionButton" id="switchBetweenCommentsAndVotingButton">
         {{#if showingComments}}
-            <span>*</span>
+            <span class="reactionButtonIcon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 33.5 53.4" xml:space="preserve">
+                    <path d="M33.5 46.6 13.7 26.7 33.5 6.8 26.7 0 0 26.7l26.7 26.7z"/>
+                </svg>
+            </span>
             <span>STEM</span>
         {{else}}
-            <span>+</span>
+            <span class="reactionButtonIcon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 33.5 53.4" xml:space="preserve">
+                  <path d="m0 6.8 19.9 19.9L0 46.6l6.8 6.8 26.7-26.7L6.8 0z"/>
+                </svg>
+            </span>
             <span>NIEUW</span>
         {{/if}}
     </button>
