--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -289,7 +289,11 @@
         id="agreeButton"
         class="reactionButton"
         >
-        <span>V</span>
+        <span class="reactionButtonIcon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 65.8 47.2" xml:space="preserve">
+              <path d="M25.5 33.5 6.9 14.9 0 21.8l25.5 25.4L65.8 6.9 59 0z"/>
+            </svg>
+        </span>
         <span>{{s.agree}}</span>
       </button>
       <button
