--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -310,7 +310,7 @@ img {
   background-color: $kennislink-black;
   text-decoration: none;
   font-size: 14px;
-  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-family: $sans-font;
   text-rendering: optimizeLegibility;
   padding: 0;
   display: flex;
