--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -302,6 +302,7 @@ img {
   color: white;
 }
 
+
 .reactionButton{
   cursor: pointer;
   //transition: all .2s ease-in-out;
@@ -310,7 +311,7 @@ img {
   background-color: $kennislink-black;
   text-decoration: none;
   font-size: 14px;
-  font-family: $sans-font;
+  font-family: "Campton-SemiBold", Helvetica, sans-serif;
   text-rendering: optimizeLegibility;
   padding: 0;
   display: flex;
@@ -587,6 +588,7 @@ svg {
     border-radius: 0;
     box-shadow: none;
     border: 0;
+    min-height: 58px; // space for two lines, height itself is overwritten at element-level
 
     &:focus {
       outline: 1px $kennislink-medium-gray solid;
