--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -300,14 +300,23 @@
         id="disagreeButton"
         class="reactionButton"
         >
-        <span>X</span>
+        <span class="reactionButtonIcon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 53.4 53.4" xml:space="preserve">
+                <path d="m0 6.8 19.9 19.9L0 46.6l6.8 6.8 26.7-26.7L6.8 0z"/>
+                <path d="M53.4 46.6 33.5 26.7 53.4 6.8 46.6 0 19.9 26.7l26.7 26.7z"/>
+            </svg>
+        </span>
         <span>{{s.disagree}}</span>
       </button>
       <button
         id="passButton"
         class="reactionButton"
         >
-        <span>/</span>
+        <span class="reactionButtonIcon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 53.4 53.4" xml:space="preserve">
+                <path d="m46.575.04 6.788 6.788L6.765 53.425l-6.788-6.788z"/>
+            </svg>
+        </span>
         <span>{{s.pass}}</span>
       </button>
     </div>
