--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -347,6 +347,10 @@ img {
     &:first-child{
       background: $kennislink-medium-gray;
     }
+
+    &:last-child{
+      margin-top: 3px;
+    }
   }
 }
 
