--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -45,7 +45,7 @@
 {{else}}  {{!-- !needSocial --}}
 
 {{#if empty}}
-  <div  style="margin: 20px;" class="Notification Notification--warning"> {{!-- empty scenario div --}}
+  <div  class="Notification Notification--warning"> {{!-- empty scenario div --}}
   {{#if subscribed}}
     <p class="HeadingF HeadingF--light "><i class="fa fa-bell-o"></i>&nbsp;<strong>{{txt1}}</strong></p>
     <p>{{txt2}}</p>
