--- a/client-participation/css/conversationView.scss
+++ b/client-participation/css/conversationView.scss
@@ -160,7 +160,7 @@ img {
 
 .lightPanel {
   background-color: $kennislink-light-gray;
-  padding: 1.5rem 3rem;
+  padding: 2.5rem;
   //border: solid 1px lightgray;
   //border-radius: 5px;
 }
@@ -574,7 +574,12 @@ svg {
 
 
 #commentCharCount, #commentCharCountExceeded {
-  margin-right: 15px;
+  top: 2px;
+  position: relative;
+}
+
+#commentCharCountExceeded {
+  font-size: 12px;
 }
 
 #comment_shower p, #comment_shower h3 {
@@ -592,7 +597,7 @@ svg {
     border-radius: 0;
     box-shadow: none;
     border: 0;
-    min-height: 58px; // space for two lines, height itself is overwritten at element-level
+    min-height: 81px; // space for three lines, height itself is overwritten at element-level
 
     &:focus {
       outline: 1px $kennislink-medium-gray solid;
