Tweak styling and tweaks

--- a/client-participation/js/templates/participation.handlebars
+++ b/client-participation/js/templates/participation.handlebars
@@ -243,15 +243,15 @@
   {{#if hideHelp}} displayNone{{/if}}
   {{#if no_voting}} displayNone{{/if}} {{!-- this line is here because the help text references voting --}}
   ">
-  <p
-    style="margin: 0px;"
-    >
-    <span>
-      {{!-- TODO_SECURITY try to not use triple brackets. --}}
-      {{{s.participantHelpWelcomeText}}}
-    </span>
+<!--  <p-->
+<!--    style="margin: 0px;"-->
+<!--    >-->
+<!--    <span>-->
+<!--      {{!-- TODO_SECURITY try to not use triple brackets. --}}-->
+<!--      {{{s.participantHelpWelcomeText}}}-->
+<!--    </span>-->
 
-  </p>
+<!--  </p>-->
 </div>
 
 {{!  ------------ SUBMIT COMMENT FORM ---------------  }}
@@ -339,9 +339,6 @@
         position: relative; --}}
 
         padding: 5px 0px 5px 0px;
-        font-style: italic;
-        font-family: chaparral-pro;
-
       " class="
         clickDoesNotDeselectHull
         {{#if hideHelp}}displayNone{{/if}}
@@ -358,9 +355,9 @@
           {{{s.participantHelpGroupsNotYetText}}}
         </span>
       </p>
-      <div id="helpTextGroupsMore" style="display:none; margin-top: 10px">
-        {{{s.helpWhatAreGroupsDetail}}}
-      </div>
+<!--      <div id="helpTextGroupsMore" style="display:none; margin-top: 10px">-->
+<!--        {{{s.helpWhatAreGroupsDetail}}}-->
+<!--      </div>-->
     </div>
   {{/if}}
 
