--- a/client-participation/js/templates/comment-form.handlebars
+++ b/client-participation/js/templates/comment-form.handlebars
@@ -37,21 +37,21 @@
           {{{s.writeCommentHelpText}}}
         </label>
       {{else}}
-        <label for="comment_form_textarea"
-               style="display:block;">
-          {{{s.writeCommentHelpText}}}
-        </label>
-        <p>
-          {{{s.helpWriteListIntro}}}
-        </p>
-        <ul>
-          <li>{{{s.helpWriteListStandalone}}}</li>
-          <li>{{{s.helpWriteListRaisNew}}}</li>
-          <li>{{{s.helpWriteListShort}}}</li>
-        </ul>
-        <label for="comment_form_textarea" style="display:block">
-          {{{s.tipCommentsRandom}}}
-        </label>
+<!--        <label for="comment_form_textarea"-->
+<!--               style="display:block;">-->
+<!--          {{{s.writeCommentHelpText}}}-->
+<!--        </label>-->
+<!--        <p>-->
+<!--          {{{s.helpWriteListIntro}}}-->
+<!--        </p>-->
+<!--        <ul>-->
+<!--          <li>{{{s.helpWriteListStandalone}}}</li>-->
+<!--          <li>{{{s.helpWriteListRaisNew}}}</li>-->
+<!--          <li>{{{s.helpWriteListShort}}}</li>-->
+<!--        </ul>-->
+<!--        <label for="comment_form_textarea" style="display:block">-->
+<!--          {{{s.tipCommentsRandom}}}-->
+<!--        </label>-->
       {{/if}}
 
       {{!-- end screen-reader-text --}}
