Tweak style and text

--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -103,7 +103,7 @@
     <span class="screen-reader-text">
       {{remainingStringScreenReader}}
     </span>
-    <p><em>{{topic}} ({{remainingString}})</em></p>
+    <p style="color: grey"><em>{{topic}} ({{remainingString}})</em></p>
     {{#if false}}
     {{! social stuff }}
         <img
