Add link to NEMO page

--- a/client-participation/js/templates/participation.handlebars
+++ b/client-participation/js/templates/participation.handlebars
@@ -433,8 +433,10 @@
         text-align: center;
       "
       >
-        {{> linkPrivacy}}
-        {{> linkTos}}
+
+        {{> linkNemo }}
+<!--        {{> linkPrivacy}}-->
+<!--        {{> linkTos}}-->
     </div>
   </div>
 
