Tweak margin between topic title and top of frame; add newline between title and statements remaining

--- a/client-participation/js/templates/vote-view.handlebars
+++ b/client-participation/js/templates/vote-view.handlebars
@@ -103,7 +103,7 @@
     <span class="screen-reader-text">
       {{remainingStringScreenReader}}
     </span>
-    <p style="color: grey"><em>{{topic}} ({{remainingString}})</em></p>
+    <p style="color: grey; margin-top: 0.5rem;"><em>{{topic}}<br/>({{remainingString}})</em></p>
     {{#if false}}
     {{! social stuff }}
         <img
