--- a/client-participation/js/templates/icon_fa_ban.handlebars
+++ b/client-participation/js/templates/icon_fa_ban.handlebars
@@ -1,3 +1,19 @@
 {{!-- Copyright (C) 2012-present, The Authors. This program is free software: you can redistribute it and/or  modify it under the terms of the GNU Affero General Public License, version 3, as published by the Free Software Foundation. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details. You should have received a copy of the GNU Affero General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>. --}}
 
-<svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" height="22px" width="22px"><path d="M1440 893q0-161-87-295l-754 753q137 89 297 89 111 0 211.5-43.5t173.5-116.5 116-174.5 43-212.5zm-999 299l755-754q-135-91-300-91-148 0-273 73t-198 199-73 274q0 162 89 299zm1223-299q0 157-61 300t-163.5 246-245 164-298.5 61-298.5-61-245-164-163.5-246-61-300 61-299.5 163.5-245.5 245-164 298.5-61 298.5 61 245 164 163.5 245.5 61 299.5z"/></svg>
+<!--<svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" height="22px" width="22px"><path d="M1440 893q0-161-87-295l-754 753q137 89 297 89 111 0 211.5-43.5t173.5-116.5 116-174.5 43-212.5zm-999 299l755-754q-135-91-300-91-148 0-273 73t-198 199-73 274q0 162 89 299zm1223-299q0 157-61 300t-163.5 246-245 164-298.5 61-298.5-61-245-164-163.5-246-61-300 61-299.5 163.5-245.5 245-164 298.5-61 298.5 61 245 164 163.5 245.5 61 299.5z"/></svg>-->
+
+<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+     viewBox="0 0 34.1 34.4" style="enable-background:new 0 0 34.1 34.4;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#D65745;}
+    .st1{fill:#D65745;stroke:#D65745;stroke-width:3;stroke-miterlimit:10;}
+</style>
+    <g>
+	<path class="st0" d="M17,34.4c-9.5,0-17.2-7.7-17.2-17.2S7.5,0,17,0s17.2,7.7,17.2,17.2S26.4,34.4,17,34.4z M17,5
+		C10.2,5,4.8,10.5,4.8,17.2S10.2,29.4,17,29.4s12.2-5.5,12.2-12.2S23.7,5,17,5z"/>
+</g>
+    <g>
+	<polygon class="st1" points="10.2,12.2 15.2,17.2 10.2,22.2 11.9,23.9 18.7,17.2 11.9,10.4 	"/>
+        <polygon class="st1" points="23.7,22.2 18.7,17.2 23.7,12.2 22,10.4 15.2,17.2 22,23.9 	"/>
+</g>
+</svg>
